# axiom

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TRACKING.md
.github/workflows/: ci.yml
axiom-trace/: Cargo.toml
axiom-trace/src/: lib.rs  mcp.rs
compiler/: Cargo.toml
compiler/examples/: ffi_own.rs
compiler/src/: emit_mlir.rs  epoch.rs  lib.rs  ownership.rs  parallel.rs  parallelize.rs  purity.rs  region.rs  std_own.rs
docs/: EffectSurface.md
examples/: checkout.ax
