# Axiom — virtual workspace root.
#
# The root is intentionally a *virtual* workspace (no root package) so that
# `cargo check --workspace` / CI builds cleanly WITHOUT LLVM/MLIR or hvm-core
# installed. The MLIR and parallelism dependencies live in the `compiler`
# crate, feature-gated (--features mlir / --features parallel), and rmcp lives
# in `axiom-trace`. This keeps the default build turnkey for contributors.
[workspace]
members = ["compiler", "axiom-trace"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/slab1/axiom"

[profile.release]
opt-level = 3
lto = true
